Tue Sep 20 06:43:33 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI/run_mt_noupcall.pl:
        * tests/MT_Client/run_test.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.

Tue Sep 20 06:27:42 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Oneway_Send_Timeouts/run_test.pl:
          Fixed runtime issues

Fri Sep 16 12:01:35 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * DevGuideExamples/Multithreading/ThreadPerConnection/run_test.pl:
        * tests/CSD_Collocation/run_test.pl:
        * tests/Connection_Purging/run_test.pl:
        * tests/Hang_Shutdown/run_test.pl:
        * tests/LongUpcalls/run_test.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.

Fri Sep 16 07:55:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Faults/run_test.pl:
        * tests/Faults/run_test_pp.pl:
        * tests/MT_NoUpcall_Client_Leader/run_test.pl:
        * tests/POA/EndpointPolicy/run_test_dh.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.

Fri Sep 16 07:37:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Connect_Strategy_Test/run_test.pl:
        * tests/MT_BiDir/run_test.pl:
        * tests/MT_Server/run_test.pl:
        * tests/No_Server_MT_Connect_Test/run_test.pl:
        * tests/RTCORBA/Server_Protocol/run_test.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.
