@@ -1,3 +1,8 @@
+Wed Sep 21 13:40:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/MT_Client/run_test.pl:
+          Removed conf files that are not in the repo at all
+
 Tue Sep 20 06:43:33 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * tests/AMI/run_mt_noupcall.pl:
